--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
   align-items: center;
   padding: 3em 0;
   height: 100vh;
-  background: url("img/confetti.jpg");
+  background: url("/Users/tainarasilva/Desktop/js-subscripition-calculator/img/confetti.jpg");
   background-size: cover;
   font-family: "Cabin", sans-serif;
   font-size: 16px;
